Fix border bottom and remove scrollbars

--- a/src/index.css
+++ b/src/index.css
@@ -4,10 +4,14 @@ body {
   text-align: center;
 }
 
+body::-webkit-scrollbar {
+  display: none;
+}
+
 section {
   background-color: #048ba8;
   border-radius: 20px;
-  min-height: 30em;
+  min-height: 50%;
   height: fit-content;
 }
 
@@ -44,11 +48,28 @@ section div ul {
 
 /* Specific styles */
 
-.divider {
-  height: 1px;
+.projects {
+  height: 50%;
+  overflow: auto;
+  -ms-overflow-style: none;
+  scrollbar-width: none;
+}
+
+.projects div {
+  border-style: solid;
+  border-color: #0c084c;
+  border-width: 0px 0px 3px;
   width: 75%;
-  margin: -5px auto 5px;
-  background: #0c084c;
+  margin: auto;
+  padding-top: 3px;
+}
+
+.projects div:last-child {
+  border-style: none;
+}
+
+.projects::-webkit-scrollbar {
+  display: none;
 }
 
 .projects p {
